# canary

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e-demo.yml
archive/output-compliance/objectives/eu-taxonomy/: README.md  article-1-2.md  article-10-1-and-10-2.md  article-22.md  (+23 more)
config/: sources.yaml
demo/: DEMO.md  README.md  docker-entrypoint.sh  run-demo.sh  run_p3.py
demo/corpus/extraction/: sfdr-l1.json
demo/corpus/sources/: sfdr-l1.html
deploy/: canary.service  canary.timer  install.sh
docs/: architecture.md  citation-verification.md  extraction.md  operations.md  review.md  storage-and-audit.md  technology.md  vault-integration.md
output/: README.md
output/compliance/objectives/: README.md
scripts/: reimport.py
src/canary/: __main__.py  issues.py  scheduler.py  tracing.py
src/canary/analysis/: extractor.py  mapper.py  models.py  normalize.py  objectives.py  verifier.py
src/canary/detection/: differ.py  hasher.py  store.py
src/canary/fetchers/: base.py  eurlex.py  fixture.py  govinfo.py  irishstatute.py  nzleg.py  ukleg.py
src/canary/graph/: graph.py  nodes.py  state.py
src/canary/output/: alerts.py  schema.py  vault.py
tests/fixtures/: sfdr_l1.html
tests/unit/: test_analysis.py  test_detection.py  test_extractor.py  test_fetcher.py  test_fetcher_http.py  test_fixture_fetcher.py  test_graph.py  test_graph_e2e.py  test_issues.py  test_mapper.py  test_normalize.py  test_objectives.py  test_scheduler.py  test_schema.py  test_tracing.py  test_vault.py
(+770 files in other folders)
